# pylognet

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  setup.py  test_client.py  test_server.py  test_user.py
pylognet/: __init__.py  client.py  logger.py  server.py  settings.py
src/: client.py  logger.py  server.py
src/pylognet/: __init__.py
