[project]
name = "pylognet"
version = "0.2.0"
description = "Tiny logging library over FastAPI and Requests"
authors = [
  { name="uPiscium", email="upiscium@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.119.1",
    "requests>=2.32.4",
    "setuptools>=70.9.0",
    "uvicorn>=0.33.0",
]

[build-system]
requires = ["setuptools >= 70.9.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/upiscium/pylognet"
